// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`traverses directory tree up until it finds jest.config 1`] = `
"  console.log
<<REPLACED>>/jest-config-ts/some/nested/directory

      at Object.call (__tests__/a-giraffe.js:3:27)
"
`;

exports[`traverses directory tree up until it finds jest.config 2`] = `
"PASS ../../../__tests__/a-giraffe.js
  ✓ giraffe
  ✓ abc"
`;

exports[`traverses directory tree up until it finds jest.config 3`] = `
"Test Suites: 1 passed, 1 total
Tests:       2 passed, 2 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;

exports[`works with jest.config.ts 1`] = `
"PASS __tests__/a-giraffe.js
  ✓ giraffe"
`;

exports[`works with jest.config.ts 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;

exports[`works with tsconfig.json 1`] = `
"PASS __tests__/a-giraffe.js
  ✓ giraffe"
`;

exports[`works with tsconfig.json 2`] = `
"Test Suites: 1 passed, 1 total
Tests:       1 passed, 1 total
Snapshots:   0 total
Time:        <<REPLACED>>
Ran all test suites."
`;
